app/assets/stylesheets/homepage/header.scss
.homepage-container{
    background-image: image-url('splashbackground.png');
    background-size: cover;
}
.homepage-nav {
  display: flex;
  justify-content: space-between;
  background: #23272A;
  color: lightgray;
  font-size: 14px;
  width: 100%;
  height: 72px;
  // max-width: 1600px;
  // padding: 0 30px;
  // position: relative;
}

.homepage-nav-left {
  display: flex;
  align-items: center;

  ul{
    display: flex;
  }

  ul li {
    padding-right: 30px;
  }
  ul li:hover {
    color: #FFFFFF;
  }

}

.homepage-nav-right {
  display: flex;
  align-items: center;
  font-size: 20px;
  padding-right: 20px;
  a {
    padding-right: 20px; 
  }
  i:hover {
    color: #fff;
  }
  .header-login:hover{
    background-color: #637acc;
  }
}


fa-envelope {
  font-size: 27px;
}

 .homepage-logo {
   display: flex;
   font-size: 25px;
   align-items: center;
  //  position: absolute;
  //  top: 1%;
   left: 1%;
   color: #FFFFFF;
   text-shadow: 0px 1px #fff;
   padding-right: 20px;
   padding-left: 20px;
   p {
     font-family: 'Baloo Bhai', cursive;
     color: #blue;
   }
 }

 .fa-envelope {
  border-right: 1px solid lightgray;
  padding-right: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
 }

 .header-login {
  align-self: center;
  font-size: 16px;
  border: 2px solid hsla(0, 0%, 100%, .8);
  border-radius: 20px;
  color: #fff;
  line-height: 24px;
  margin-right: 18px;
  padding: 5px 20px 7px;
  top: 1%;
  background-color: #7289DA;
  border-color: #2C2F33;
 }

